apply plugin: 'java'
apply plugin: 'maven'
apply plugin: "idea"


sourceCompatibility = targetCompatibility = 8

group 'pers.defoliation'
version releaseTime() + '.1'

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        include 'plugin.yml'
        expand 'version': "${project.version}"
    }
}

jar {
    setArchiveName(
            "Cap-bukkit-${project.version}.jar"
    )
}

def releaseTime() {
    return new Date().format("yyyy.MM.dd", TimeZone.getTimeZone("UTC"))
}

repositories {
    maven {
        url 'https://maven.aliyun.com/repository/public'
    }
    jcenter()
    mavenCentral()
    maven {
        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots"
    }
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

jar {
    from {
        configurations.runtimeClasspath.collect  { it.isDirectory() ? it : zipTree(it) }
    }
}

jar {
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}

dependencies {
    compile 'com.google.guava:guava:30.1-jre'
    compile 'org.apache.commons:commons-lang3:3.11'

    implementation group: 'org.ow2.asm', name: 'asm', version: '7.1'
    implementation group: 'org.ow2.asm', name: 'asm-tree', version: '7.1'
    implementation group: 'org.ow2.asm', name: 'asm-util', version: '7.1'
    implementation group: 'org.ow2.asm', name: 'asm-commons', version: '7.1'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
}
